[gd_scene load_steps=7 format=2]

[ext_resource path="res://EnemyScenes/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Art/enemies/bomb-smiler/bomb-smiler.png" type="Texture" id=2]
[ext_resource path="res://EnemyScenes/BombSmiler.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "BSDead"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 30.9253, 28.4854 ), Vector2( 32.1628, 33.2584 ), Vector2( 41.3551, 43.1579 ), Vector2( 53.9063, 48.2844 ), Vector2( 0.166168, 0.201118 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Default"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 30.9253, 28.4854 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 30.9253, 28.4854 ) ]
}

[node name="Enemy" instance=ExtResource( 1 )]
position = Vector2( 0, 0 )
collision_mask = 25
script = ExtResource( 3 )
dead_animation_name = "BSDead"

[node name="ShootTimer" type="Timer" parent="." index="0"]
wait_time = 0.001
autostart = true

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0.426773, -13.9461 )

[node name="AnimationPlayer" parent="." index="2"]
anims/BSDead = SubResource( 1 )
anims/Default = SubResource( 2 )
anims/Shoot = SubResource( 3 )

[node name="Sprite" parent="." index="3"]
position = Vector2( 1, 0 )
texture = ExtResource( 2 )
hframes = 13
frame = 6

[node name="LifeTimer" parent="." index="4"]
wait_time = 10.0

[node name="DirectionSwitchTimer" type="Timer" parent="." index="5"]
autostart = true
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="DirectionSwitchTimer" to="." method="_on_DirectionSwitchTimer_timeout"]
